--- a/app/src/main/res/layout/activity_house_information_details_registration.xml
+++ b/app/src/main/res/layout/activity_house_information_details_registration.xml
@@ -191,12 +191,6 @@
                 />
 
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
                 <ImageView
                     android:id="@+id/TV_House_Image"
                     android:layout_width="300dp"
@@ -212,11 +206,9 @@
                     android:text="Browse"
                     android:textStyle="bold"
                     android:textColor="#CA0C0C"
-                    android:layout_marginTop="100dp">
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="10dp">
                 </Button>
-
-
-            </LinearLayout>
 
 
 
