--- a/app/src/main/res/layout/dialog_contect.xml
+++ b/app/src/main/res/layout/dialog_contect.xml
@@ -183,17 +183,16 @@
                 android:textSize="20sp">
             </TextView>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Google Map"
-                android:textColor="@android:color/holo_red_dark"
-                android:textStyle="bold"
-                android:id="@+id/googleMap_dialog_ID"
-                android:layout_marginTop="10dp"
-                android:textSize="20sp"
-                android:background="#DDBD7C">
-            </Button>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_marginTop="30sp"
+                android:id="@+id/showPicture_dialog_ID"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:src="@mipmap/ic_launcher"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_horizontal">
+            </de.hdodenhof.circleimageview.CircleImageView>
+
 
         </LinearLayout>
     </ScrollView>
