--- a/app/src/main/res/layout/activity_sms.xml
+++ b/app/src/main/res/layout/activity_sms.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Send"
-        android:onClick="sendID"
+        android:onClick="sendId"
         tools:ignore="OnClick" />
 
 
